* Added 'SharedCache' downloader, no longer requires a game install to run * Replaced SharedCacheReader with 'SharedCache' downloader * Extended Mutaplasmid information display; Now more comprehensively links involved modules & sources * Included additional fields in 'Type'; metaGroupID, portionSize, & basePrice * Added 'TypeMarketPrice' component & browser-side price querying logic (Currently still yields some incorrect data) * Added randomized reprocessing results to TypeIndustry * Restructured SDE data handling to include 'ID' fields in data-types, rather than passed alongside the data-types * Removed YAMLSDEReader, related update logic, and dependencies * Various CSS tweaks * build.gradle refactor to use java-plugin